--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="left-text">
           <h1>It doesn't hurt to keep practicing</h1>
           <blockquote cite="Emanuel, Sr Strategist at Hiring.com">
-            Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequate neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula.
+            "Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequate neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."
           </blockquote>
           <cite>Emanuel, Sr Strategist at Hiring.com</cite>
         </div>
@@ -95,7 +95,7 @@
         <div class="panel-courses">
           <img src="./resources/images/course-software.jpg" alt="Computer Monitors">
           <div class="course-text">
-            <h2>Software Engineering</h2>
+            <a href="#"><h2>Software Engineering</h2></a>
             <p>COURSES</p>
             <p>Web Development, Mobile Development, iOT, APIs</p>
           </div>
@@ -103,7 +103,7 @@
         <div class="panel-courses">
           <img src="./resources/images/course-computer-art.jpg" alt="Handheld Cellphone">
           <div class="course-text">
-            <h2>Computer Art</h2>
+            <a href="#"><h2>Computer Art</h2></a>
             <p>COURSES</p>
             <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
           </div>
@@ -111,7 +111,7 @@
         <div class="panel-courses">
           <img src="./resources/images/course-design.jpg" alt="Vintage Camera">
           <div class="course-text">
-            <h2>Design</h2>
+            <a href="#"><h2>Design</h2></a>
             <p>COURSES</p>
             <p>User Experience Design, User Research, Visual Design</p>
           </div>
@@ -121,7 +121,7 @@
         <div class="panel-courses">
           <img src="./resources/images/course-data.jpg" alt="Laptop Charts">
           <div class="course-text">
-            <h2>Data</h2>
+            <a href="#"><h2>Data</h2></a>
             <p>COURSES</p>
             <p>Data Science, Big Data, SQL, Data Visualization</p>
           </div>
@@ -129,7 +129,7 @@
         <div class="panel-courses">
           <img src="./resources/images/course-business.jpg" alt="Chess Pieces">
           <div class="course-text">
-            <h2>Business</h2>
+            <a href="#"><h2>Business</h2></a>
             <p>COURSES</p>
             <p>Product Development, Business Development, Startup</p>
           </div>
@@ -137,19 +137,19 @@
         <div class="panel-courses">
           <img src="./resources/images/course-marketing.jpg" alt="Smartwatch">
           <div class="course-text">
-            <h2>Marketing</h2>
+            <a href="#"><h2>Marketing</h2></a>
             <p>COURSES</p>
             <p>Analytics, Content Marketing, Mobile Marketing</p>
           </div>
         </div>
       </div>
       <div class="mobile flex">
-        <p><a>Software Engineering</a></p>
-        <p><a>Computer Art</a></p>
-        <p><a>Design</a></p>
-        <p><a>Data</a></p>
-        <p><a>Business</a></p>
-        <p><a>Marketing</a></p>
+        <p><a href="#">Software Engineering</a></p>
+        <p><a href="#">Computer Art</a></p>
+        <p><a href="#">Design</a></p>
+        <p><a href="#">Data</a></p>
+        <p><a href="#">Business</a></p>
+        <p><a href="#">Marketing</a></p>
       </div>
     </section>
 
@@ -168,9 +168,9 @@
           <source src="./resources/videos/thesis.mp4" type="video/mp4">
         </video>
         <div class="left-text">
-          <h2>Reimagine urban</h2>
+          <h2>Reimagine Urban</h2>
           <blockquote cite="">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            "Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequate neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."
           </blockquote>
         </div>
       </div>
@@ -179,14 +179,14 @@
         <div class="panel-right fisma">
           <img src="./resources/images/thesis-fisma.jpg" alt="Drawing">
           <div class="right-text">
-            <h2>Fisma: Design and Prototype</h2>
+            <a href="#">Fisma: Design and Prototype</a>
             <p>Designer showcase of new prototype product</p>
           </div>
         </div>
         <div class="panel-right">
           <img src="./resources/images/thesis-now-and-then.jpg" alt="Empire State Building">
           <div class="right-text">
-            <h2>Now and Then</h2>
+            <a href="#">Now and Then</a>
             <p>Research study about New York</p>
           </div>
         </div>
